tests/artifacts/tcproute-accepted.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1alpha2","kind":"TCPRoute","metadata":{"annotations":{},"name":"tcp-backend-route","namespace":"default"},"spec":{"parentRefs":[{"name":"multi-proto-gw","sectionName":"tcp"}],"rules":[{"backendRefs":[{"name":"tcp-backend","port":8080}]}]}}
  creationTimestamp: "2026-07-07T22:00:04Z"
  generation: 1
  name: tcp-backend-route
  namespace: default
  resourceVersion: "980"
  uid: 146d433e-8b4f-450b-a954-4e042ec0af10
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: multi-proto-gw
    sectionName: tcp
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: tcp-backend
      port: 8080
      weight: 1
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-07-07T22:00:04Z"
      message: Route is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-07-07T22:00:04Z"
      message: Resolved all the Object references for the Route
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: multi-proto-gw
      sectionName: tcp
